--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 body {
+  background:#6e739a;
+  margin: 50px 0;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1em;
   /*background: url(img/Logo_nuc.png);*/
   background-repeat: no-repeat;
   background-size: 200px;
-  border: 1px solid blue;
+
 }
 .img{
   position: absolute;
@@ -16,7 +18,7 @@ body {
 .container{
 	width: 100%;
   height: 80%;
-  border: 1px solid red;
+
 }
 .inner{
 	width:62%;
@@ -26,7 +28,7 @@ body {
 ul{
 	list-style-type: none;
 	margin-left:-40px;
-  border: 1px solid black;
+	margin-top: 10%;
 }
 /*********************** LIST ***********************/
 .simpleListAnswer:hover{
@@ -38,12 +40,11 @@ ul{
 	padding:5px;
 	margin-top:26px;
 	font-size: 13px;
-	border: 1px solid #d3d3d3;
-  background: whitesmoke;
+  background: #7addec;
 
 }
 .simpleListAnswer:hover, .quizzAnswer:hover{
- background: #e9e9e9;
+ background:  #e9c4f1;
 }
 .simpleListText{
 	font-size: 18px;
@@ -51,8 +52,7 @@ ul{
 }
 /***************************ANSWER REVEAL******************/
 .quizzAnswerC,.quizzAnswerF,.finalResult{
-	background: #fefefe;
-	border: 1px solid #ddd;
+	background: #f6f1f7;
 }
 .answerReveal{
 	display: none;
@@ -60,7 +60,6 @@ ul{
   font-size: 14px;
 	color: rgb(3, 3, 46);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  border: 1px solid red;
 	margin-top: 0; 
 }
 .answerHeader div{
@@ -144,7 +143,6 @@ input.hide:checked ~ div.content {
   width: 825px;
   height: 520px;
   /*background-color: #fdfd96;*/
-  border: 1px #fefefe solid;
   margin-left: 2,5%;
   margin-top: 7%;
 
@@ -186,7 +184,6 @@ input.hide:checked ~ div.content {
     width: 100px;   
     height: 40px;   
     box-shadow: rgb(112, 113, 121);  
-    border-radius: 10px;   
     font-size: 12px;   
     font-weight: bold;   
     background-image: linear-gradient(to bottom, #ffffff, #c1c5cc 130%);   
@@ -202,7 +199,6 @@ input.hide:checked ~ div.content {
   width: 820px;
   height: 350px;
   position: absolute;
-  border: 4px solid rgb(117, 11, 11);
   /*background-color: #F5F5F5;*/
   margin-top: 4%;
   margin-right: 50%;
@@ -213,7 +209,6 @@ input.hide:checked ~ div.content {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   text-shadow: #c4bfbf  3px 2px;
-  border: 1px solid yellow;
 }
 .textMot{
   color: #dbd01e;
@@ -221,10 +216,9 @@ input.hide:checked ~ div.content {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   text-shadow: #c4bfbf  3px 2px;
-  border: 1px solid rgb(0, 68, 255);
 }
 .qst{
-	margin-top: 70px;
+	margin-top: 30%;
 	margin-bottom: 10px;
 	margin-left: 20px;
 	text-align: center;
@@ -233,6 +227,11 @@ input.hide:checked ~ div.content {
 
 
 
+/***************************************************************************************************************/
 
 
-
+  
+/*
+jQuery-Circle-Plugin v0.1 by Jamal hassouni
+https://github.com/jamalhassouni
+*/
