--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
   /*background: url(img/Logo_nuc.png);*/
   background-repeat: no-repeat;
   background-size: 200px;
-  border: 1px solid blue;
 }
 .img{
   position: absolute;
@@ -16,7 +15,6 @@ body {
 .container{
 	width: 100%;
   height: 80%;
-  border: 1px solid red;
 }
 .inner{
 	width:62%;
@@ -26,7 +24,7 @@ body {
 ul{
 	list-style-type: none;
 	margin-left:-40px;
-  border: 1px solid black;
+	margin-top: 10%;
 }
 /*********************** LIST ***********************/
 .simpleListAnswer:hover{
@@ -38,7 +36,6 @@ ul{
 	padding:5px;
 	margin-top:26px;
 	font-size: 13px;
-	border: 1px solid #d3d3d3;
   background: whitesmoke;
 
 }
@@ -52,7 +49,7 @@ ul{
 /***************************ANSWER REVEAL******************/
 .quizzAnswerC,.quizzAnswerF,.finalResult{
 	background: #fefefe;
-	border: 1px solid #ddd;
+
 }
 .answerReveal{
 	display: none;
@@ -60,7 +57,6 @@ ul{
   font-size: 14px;
 	color: rgb(3, 3, 46);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  border: 1px solid red;
 	margin-top: 0; 
 }
 .answerHeader div{
@@ -144,7 +140,6 @@ input.hide:checked ~ div.content {
   width: 825px;
   height: 520px;
   /*background-color: #fdfd96;*/
-  border: 1px #fefefe solid;
   margin-left: 2,5%;
   margin-top: 7%;
 
@@ -202,7 +197,6 @@ input.hide:checked ~ div.content {
   width: 820px;
   height: 350px;
   position: absolute;
-  border: 4px solid rgb(117, 11, 11);
   /*background-color: #F5F5F5;*/
   margin-top: 4%;
   margin-right: 50%;
@@ -213,20 +207,19 @@ input.hide:checked ~ div.content {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   text-shadow: #c4bfbf  3px 2px;
-  border: 1px solid yellow;
 }
+
 .textMot{
   color: #dbd01e;
   font-size: 50px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   text-shadow: #c4bfbf  3px 2px;
-  border: 1px solid rgb(0, 68, 255);
 }
 .qst{
-	margin-top: 70px;
+	margin-top: 20%;
 	margin-bottom: 10px;
-	margin-left: 20px;
+	margin-left: 16px;
 	text-align: center;
 }
 
